# Mentor

./: .env.example  .gitignore  README.md  docker-compose.yml
.claude/: launch.json
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/agent/: deps.py  graph.py  memory_repo.py  repo.py  state.py
backend/app/agent/nodes/: adapter.py  diagnoser.py  grader.py  planner.py  quizzer.py  scheduler.py  teacher.py
backend/app/agent/tools/: quiz_gen.py  web_search.py
backend/app/api/: engine.py  paths.py  progress.py  reviews.py  schemas.py  sessions.py  views.py
backend/app/db/: engine.py  migrate.py  models.py  schema.sql  sql_repo.py
backend/app/eval/: harness.py
backend/app/llm/: anthropic_provider.py  openai_provider.py  provider.py
backend/app/memory/: context.py  graph_utils.py  srs.py
backend/app/seed/: concepts.py
backend/tests/: test_agent_graph.py  test_api.py  test_context.py  test_eval.py  test_graph_utils.py  test_srs.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ChatPanel.tsx  DueReviewBadge.tsx  LevelSwitcher.tsx  MasteryDashboard.tsx  PathSidebar.tsx
frontend/src/hooks/: useSession.ts
frontend/src/pages/: Learn.tsx
